recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: not found: value void
  void show()
  ^