recursion.logo.square.FourSquare.scala.code
override def run() {
  void show()
}
